--- a/src/tests/dejagnu/Makefile.in
+++ b/src/tests/dejagnu/Makefile.in
@@ -10,7 +10,7 @@ SRCS=$(srcdir)/t_inetd.c
 
 all install::
 
-check:: check-runtest-@HAVE_RUNTEST@ ./pkinit-certs
+check:: check-runtest-@HAVE_RUNTEST@
 
 check-runtest-no::
 	@echo "+++"
@@ -25,13 +25,8 @@ check-runtest-yes:: t_inetd site.exp
 t_inetd:: t_inetd.o $(KRB5_BASE_DEPLIBS)
 	$(CC_LINK) -o t_inetd t_inetd.o $(KRB5_BASE_LIBS)
 
-# symlink pkinit certificate directory to avoid relative vs absolute srcdir
-./pkinit-certs:
-	$(LN) -s $srcdir/pkinit-certss pkinit-certs
-
 clean::
 	$(RM) t_inetd t_inetd.o site.exp runenv.vars runenv.vals
-	-test -l pkinit-certs && $(RM) pkinit-certs
 
 clean-unix::
 	$(RM) -rf tmpdir dbg.log krb.log krb.sum
