--- a/src/lib/krb5/krb/Makefile.in
+++ b/src/lib/krb5/krb/Makefile.in
@@ -77,6 +77,7 @@ STLIBOBJS= \
 	pr_to_salt.o	\
 	preauth.o	\
 	preauth2.o	\
+	gic_opt_set_pa.o	\
 	princ_comp.o	\
 	rd_cred.o	\
 	rd_error.o	\
@@ -175,6 +176,7 @@ OBJS=	$(OUTPRE)addr_comp.$(OBJEXT)	\
 	$(OUTPRE)pr_to_salt.$(OBJEXT)	\
 	$(OUTPRE)preauth.$(OBJEXT)	\
 	$(OUTPRE)preauth2.$(OBJEXT)	\
+	$(OUTPRE)gic_opt_set_pa.$(OBJEXT)	\
 	$(OUTPRE)princ_comp.$(OBJEXT)	\
 	$(OUTPRE)rd_cred.$(OBJEXT)	\
 	$(OUTPRE)rd_error.$(OBJEXT)	\
@@ -274,6 +276,7 @@ SRCS=	$(srcdir)/addr_comp.c	\
 	$(srcdir)/pr_to_salt.c	\
 	$(srcdir)/preauth.c	\
 	$(srcdir)/preauth2.c	\
+	$(srcdir)/gic_opt_set_pa.c	\
 	$(srcdir)/princ_comp.c	\
 	$(srcdir)/rd_cred.c	\
 	$(srcdir)/rd_error.c	\
