ticket: 6644 subject: Change basename of libkadm5 libraries to avoid Heimdal conflict
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23662 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -316,8 +316,8 @@ DEPLIBEXT=@DEPLIBEXT@
 KDB5_PLUGIN_DEPLIBS = @KDB5_PLUGIN_DEPLIBS@
 KDB5_PLUGIN_LIBS = @KDB5_PLUGIN_LIBS@
 
-KADMCLNT_DEPLIB	= $(TOPLIBD)/libkadm5clnt$(DEPLIBEXT)
-KADMSRV_DEPLIB	= $(TOPLIBD)/libkadm5srv$(DEPLIBEXT)
+KADMCLNT_DEPLIB	= $(TOPLIBD)/libkadm5clnt_mit$(DEPLIBEXT)
+KADMSRV_DEPLIB	= $(TOPLIBD)/libkadm5srv_mit$(DEPLIBEXT)
 KDB5_DEPLIB	= $(TOPLIBD)/libkdb5$(DEPLIBEXT)
 GSSRPC_DEPLIB	= $(TOPLIBD)/libgssrpc$(DEPLIBEXT)
 GSS_DEPLIB	= $(TOPLIBD)/libgssapi_krb5$(DEPLIBEXT)
@@ -385,8 +385,8 @@ GSS_LIBS	= $(GSS_KRB5_LIB)
 GSSRPC_LIBS	= -lgssrpc $(GSS_LIBS)
 KADM_COMM_LIBS	= $(GSSRPC_LIBS)
 # need fixing if ever used on Mac OS X!
-KADMSRV_LIBS	= -lkadm5srv $(HESIOD_LIBS) $(KDB5_LIBS) $(KADM_COMM_LIBS)
-KADMCLNT_LIBS	= -lkadm5clnt $(KADM_COMM_LIBS)
+KADMSRV_LIBS	= -lkadm5srv_mit $(HESIOD_LIBS) $(KDB5_LIBS) $(KADM_COMM_LIBS)
+KADMCLNT_LIBS	= -lkadm5clnt_mit $(KADM_COMM_LIBS)
 
 # libutil for NetBSD, et al. for openpty(), etc.
 UTIL_LIB	= @UTIL_LIB@
