ticket: 6672 subject: Python test framework
Add a framework for writing tests in Python.  Documentation is in the
initial docstring of util/k5test.py.  Inaugurate the framework with
two test scripts, t_general.py and t_anonypkinit.py, which together
test the same operations as standalone.exp from the dejagnu test
suite.


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23763 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -128,6 +128,23 @@ undepend-postrecurse: undepend-recurse
 # end dependency generation
 ##############################
 
+# Python tests
+check-unix:: check-python-tests-@HAVE_PYTHON@
+
+check-python-tests-yes:
+	@pytests="$(PYTESTS)"; \
+	for t in $$pytests; do \
+		echo PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
+		PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
+	done
+
+check-python-tests-no:
+	@if test -n "$(PYTESTS)"; then \
+		echo "+++ Skipping because Python not available: $(PYTESTS)"; \
+	fi
+
 clean:: clean-$(WHAT)
 
 clean-unix::
