Error out if a Python test program fails.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23765 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -137,7 +137,7 @@ check-python-tests-yes:
 		echo PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
 			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
 		PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
-			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
+			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS) || exit 1; \
 	done
 
 check-python-tests-no:
