subject: Make python test start_in_inetd function
util/k5test.py: Fix incorrect variable used
tests/dejagnu/t_inetd.c: Flush stdout after outputting "Ready!" 
tests/dejagnu/Makefile.in: Always compile t_inetd - even in runtest is not
			    present



git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23773 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/tests/dejagnu/Makefile.in
+++ b/src/tests/dejagnu/Makefile.in
@@ -8,7 +8,9 @@ PROG_RPATH=$(KRB5_LIBDIR)
 
 SRCS=$(srcdir)/t_inetd.c
 
-all install::
+all:: t_inetd
+
+install::
 
 check:: check-runtest-@HAVE_RUNTEST@
 
