Add a "make testrealm" target using the Python test framework.  As part of this, expose the environments in K5Realm as attributes so that test scripts can modify them.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23794 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -624,6 +624,10 @@ check-unix:: krb5-config
 	$(SHELL) $(srcdir)/t_krbconf
 check-prerecurse: fake-install
 
+# Create a test realm and spawn a shell in an environment pointing to it.
+testrealm: fake-install
+	PYTHONPATH=$(top_srcdir)/util $(PYTHON) $(srcdir)/util/testrealm.py
+
 COV_BUILD=	cov-build
 COV_ANALYZE=	cov-analyze
 COV_COMMIT=	cov-commit-defects --product "$(COV_PRODUCT)" --user "$(COV_USER)" --target "$(COV_TARGET)" --description "$(COV_DESC)"
