Set up KRB5_RUN_ENV for pytests, so that Python-based tests can run without first running "make install".
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23805 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -139,8 +139,10 @@ check-pytests:: check-pytests-@HAVE_PYTHON@
 check-pytests-yes:
 	@pytests="$(PYTESTS)"; \
 	for t in $$pytests; do \
-		echo PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
+		echo "$(KRB5_RUN_ENV)" \
+			PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
 			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS); \
+		$(KRB5_RUN_ENV) \
 		PYTHONPATH=$(top_srcdir)/util VALGRIND="$(VALGRIND)" \
 			$(PYTHON) $(srcdir)/$$t $(PYTESTFLAGS) || exit 1; \
 	done
