Include t_spengno.o in list of OBJS so make clean will remove.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23831 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/tests/gssapi/Makefile.in
+++ b/src/tests/gssapi/Makefile.in
@@ -6,7 +6,7 @@ PROG_RPATH=$(KRB5_LIBDIR)
 
 SRCS= $(srcdir)/t_imp_name.c $(srcdir)/t_s4u.c $(srcdir)/t_namingexts.c $(srcdir)/t_gssexts.c
 
-OBJS= t_imp_name.o t_s4u.o t_namingexts.o t_gssexts.o
+OBJS= t_imp_name.o t_s4u.o t_namingexts.o t_gssexts.o t_spnego.o
 
 PYTESTS= t_gssapi.py
 
